# SpimVisualize

./: .gitignore  AABB.cpp  AABB.h  BeadDetection.cpp  BeadDetection.h  CMakeLists.txt  Config.cpp  Config.h  Framebuffer.cpp  Framebuffer.h  GeometryImage.cpp  GeometryImage.h  Histogram.cpp  Histogram.h  InteractionVolume.cpp  InteractionVolume.h  LICENSE  Layout.cpp  Layout.h  OrbitCamera.cpp  OrbitCamera.h  README  Ray.cpp  Ray.h  Shader.cpp  Shader.h  SimplePointcloud.cpp  SimplePointcloud.h  SpimPlane.cpp  SpimPlane.h  SpimRegistrationApp.cpp  SpimRegistrationApp.h  SpimStack.cpp  SpimStack.h  SpimVisualize.sln  SpimVisualize.vcxproj  StackRegistration.cpp  StackRegistration.h  StackTransformationSolver.cpp  StackTransformationSolver.h  (+14 more)
CreateFijiInfo/: CMakeLists.txt  main.cpp
CreatePhantom/: CMakeLists.txt  CreatePhantomApp.cpp  CreatePhantomApp.h  StackSampler.cpp  StackSampler.h  main.cpp
EvaluateCalibration/: CMakeLists.txt  main.cpp
OpenCVTest/: OpenCVTest.vcxproj  main.cpp
shaders/: drawPosition.frag  drawPosition.vert  drawQuad.frag  drawQuad.vert  drawQuad2.vert  plane.frag  plane.vert  points.frag  points.vert  points2.frag  points2.vert  samplePlane.frag  samplePlane2.frag  samplePlane2.vert  slices.frag  slices.vert  tonemapper.frag  volume.frag  volume.vert  volume2.frag  volume2.vert  volumeDist.frag  volumeDist.vert  volumeRaycast.frag  volumeRaycast.vert
tools/: FindFreeImage.cmake  FindGLM.cmake  makeReference.py
